--- a/src/client/components/Headers/styles.scss
+++ b/src/client/components/Headers/styles.scss
@@ -1,18 +1,11 @@
-
-@import "../../../assets/styles/colors.scss";
+@import '../../../assets/styles/colors.scss';
 .header {
-  background: linear-gradient(
-      to bottom right,
-      rgba(72, 72, 212, 0),
-      rgba(241, 104, 104, 0)
-    ),
-    url('../../images/tweenkraft/header-background.jpg') center center no-repeat;
-  background-size: cover;
-
+  background-image: linear-gradient(135deg, #5f1802, #ec5f31);
+  min-height: calc(100vh);
+  padding-top: 5.25rem;
   .headerContent {
-    padding-top: 8.5rem;
-    padding-bottom: 7rem;
     text-align: center;
+    padding-top: 1rem;
   }
 
   .textContainer {
@@ -21,52 +14,145 @@
 
   .h1 {
     margin-bottom: 1rem;
-    font: 700 2rem/2.75rem "Montserrat", sans-serif;
+    font: 700 2rem/2.75rem 'Montserrat', sans-serif;
+    text-align: center;
   }
 
   .jsRotating {
     color: #40e0ee;
   }
+  .imageContainer {
+      max-width: 45rem;
+      margin-right: auto;
+      margin-left: auto;
+    }
 
-  .pLarge {
-    margin-bottom: 2rem;
+  .imageContainer img {
+    border-radius: 0.375rem;
   }
 
-  .btnSolidLg {
-    margin-right: 0.5rem;
-    margin-bottom: 1.25rem;
+  .videoWrapper {
+    position: relative;
+  }
+
+  .videoPlayButton {
+    position: absolute;
+    z-index: 10;
+    top: 50%;
+    left: 50%;
+    display: block;
+    box-sizing: content-box;
+    width: 2rem;
+    height: 2.75rem;
+    padding: 1.125rem 1.25rem 1.125rem 1.75rem;
+    border-radius: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    -ms-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+
+    &:before {
+      content: '';
+      position: absolute;
+      z-index: 0;
+      top: 50%;
+      left: 50%;
+      display: block;
+      width: 4.75rem;
+      height: 4.75rem;
+      border-radius: 50%;
+      background: #4eaaff;
+      animation: pulse-border 1500ms ease-out infinite;
+      -webkit-transform: translateX(-50%) translateY(-50%);
+      -ms-transform: translateX(-50%) translateY(-50%);
+      transform: translateX(-50%) translateY(-50%);
+    }
+
+    &:after {
+      content: '';
+      position: absolute;
+      z-index: 1;
+      top: 50%;
+      left: 50%;
+      display: block;
+      width: 4.375rem;
+      height: 4.375rem;
+      border-radius: 50%;
+      background: #4eaaff;
+      transition: all 200ms;
+      -webkit-transform: translateX(-50%) translateY(-50%);
+      -ms-transform: translateX(-50%) translateY(-50%);
+      transform: translateX(-50%) translateY(-50%);
+    }
+
+    span {
+      position: relative;
+      display: block;
+      z-index: 3;
+      top: 0.375rem;
+      left: 0.25rem;
+      width: 0;
+      height: 0;
+      border-left: 1.625rem solid #fff;
+      border-top: 1rem solid transparent;
+      border-bottom: 1rem solid transparent;
+    }
+  }
+  .button{
+    margin-top: 1.5rem;
+    width: 40%;
   }
 }
 
-@media (min-width: 768px) {
-  .header .headerContent {
-    padding-top: 11rem;
-  }
-}
-
-@media (min-width: 992px) {
+@media (max-width: 768px){
   .header {
+    .h1{
+      font: 700 1rem/1.6rem 'Montserrat', sans-serif;
+    }
     .headerContent {
-      padding-top: 13rem;
-      padding-bottom: 10rem;
-      text-align: left;
+      padding-top: 20%;
     }
-
-    .textContainer {
-      margin-top: 6.5rem;
-    }
-  }
-}
-
-@media (min-width: 1200px) {
-  .header {
-    .textContainer {
-      margin-top: 0rem;
-      margin-left: 0rem;
-    }
-
     .imageContainer {
-      margin-left: 3rem;
+      max-width: 48rem;
+    }
+    .button{
+      width: 100%;
     }
   }
 }
+
+@media (max-width: 1200px) {
+  .header {
+    .imageContainer {
+      max-width: 35rem;
+    }
+    .textContainer{
+      margin-bottom: 0;
+    }
+  }
+}
+
+@media (max-width: 1200px) and (min-height: 768px) {
+  .header {
+    .imageContainer {
+      max-width: 48rem;
+    }
+    
+  }
+}
+
+
+
+
+
+@keyframes pulse-border {
+  0% {
+    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
+    opacity: 0;
+  }
+}
+
