--- a/src/client/components/NavBar/styles.scss
+++ b/src/client/components/NavBar/styles.scss
@@ -1,231 +1,33 @@
-
-@import "../../../assets/styles/colors.scss";
+@import '../../../assets/styles/colors.scss';
 .navbarCustom {
-	background-color: #262431;
-	box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
-	font: 700 0.75rem/2rem "Montserrat", sans-serif;
-	transition: all 0.2s;
-  
-	.navbarBrand {
-	  &.logoImage img {
-		//width: 113px;
-		height: 38px;
-		margin-bottom: 1px;
-		-webkit-backface-visibility: hidden;
-	  }
-  
-	  &.logoText {
-		font: 700 2rem/1.5rem "Montserrat", sans-serif;
-		color: #fff;
-		letter-spacing: -0.5px;
-		text-decoration: none;
-	  }
-	}
-  
-	.navbarNav {
-	  margin-top: 0.75rem;
-	}
-  
-	.navItem .navLink {
-	  padding: 0 0.75rem 0 0.75rem;
-	  color: #fff;
-	  text-decoration: none;
-	  transition: all 0.2s ease;
-  
-	  &:hover, &.active {
-		color: $blue;
-		background:#FFF;
-	  }
-	}
-  
-	.dropdown:hover > .dropdownMenu {
-	  display: block;
-  	  min-width: auto;
-	  animation: fadeDropdown 0.2s;
-  
-	}
-  
-	.dropdownToggle:focus {
-	  outline: 0;
-	}
-  
-	.dropdownMenu {
-	  margin-top: 0;
-	  border: none;
-	  border-radius: 0.25rem;
-	  background-color: #262431;
-	}
-  
-	.dropdownItem {
-	  color: #fff;
-	  text-decoration: none;
-	  
-	  &:hover {
-		background-color: #262431;
-	  }
-  
-	  .itemText {
-		font: 700 0.75rem/1.5rem "Montserrat", sans-serif;
-		padding: 1px 1rem;
-	  }
-  
-	  &:hover .itemText {
-		color: $blue;
-		background: #FFF;
-		
-	  }
-	}
-  
-	.dropdownItemsDivideHr {
-	  width: 100%;
-	  height: 1px;
-	  margin: 0.25rem auto 0.25rem auto;
-	  border: none;
-	  background-color: #b5bcc4;
-	  opacity: 0.2;
-	}
-  
-	.socialIcons {
-	  display: none;
-	}
-  
-	.navbarToggler {
-	  border: none;
-	  color: #fff;
-	  font-size: 2rem;
-	}
-  
-	button {
-	  &[aria-expanded='false'] .navbarTogglerAwesome.fas {
-		&.fa-times {
-		  display: none;
-		}
-  
-		&.fa-bars {
-		  display: inline-block;
-		}
-	  }
-  
-	  &[aria-expanded='true'] .navbarTogglerAwesome.fas {
-		&.fa-bars {
-		  display: none;
-		}
-  
-		&.fa-times {
-		  display: inline-block;
-		  margin-right: 0.125rem;
-		}
-	  }
-	}
-  }
-  
-  
-  @keyframes fadeDropdown {
-	0% {
-	  opacity: 0;
-	}
-  
-	100% {
-	  opacity: 1;
-	}
-  }
-  
-  @media (min-width: 768px) {
-	.navbarCustom {
-	  padding: 2.125rem 1.5rem 2.125rem 2rem;
-	  box-shadow: none;
-  
-	  .navbarBrand.logoText {
-		color: #fff;
-	  }
-  
-	  .navbarNav {
-		margin-top: 0;
-	  }
-  
-	  .navItem .navLink {
-		padding: 0.25rem 0.75rem 0.25rem 0.75rem;
-		color: #fff;
-  
-		&:hover, &.active {
-		  color: $blue;
-		}
-	  }
-  
-	  &.topNavCollapse {
-		padding: 0.5rem 1.5rem 0.5rem 2rem;
-		box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
-		background-color: $orange;
-  
-		.navbarBrand.logoText {
-		  color: #fff;
-		}
-  
-		.navItem .navLink {
-		  color: #fff;
-  
-		  &:hover, &.active {
-			color: $blue;
-		  }
-		}
-	  }
-  
-	  .dropdownMenu {
-		box-shadow: 0 0.25rem 0.375rem 0 rgba(0, 0, 0, 0.03);
-	  }
-  
-	  .dropdownItem {
-		padding-top: 0.25rem;
-		padding-bottom: 0.25rem;
-	  }
-  
-	  .dropdownItemsDivideHr {
-		width: 84%;
-	  }
-	}
-  }
+  background-color: #262431;
+  box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
+  font: 700 0.75rem/2rem 'Montserrat', sans-serif;
+  transition: all 0.2s;
+  padding: 1.125rem 1.5rem 1.125rem 2rem;
+  .navbarBrand {
+    &.logoImage img {
+      //width: 113px;
+      height: 38px;
+      margin-bottom: 1px;
+      -webkit-backface-visibility: hidden;
+    }
 
-  @media (min-width: 992px) {
-	.navbarCustom {
-	  .socialIcons {
-		display: block;
-		margin-left: 0.5rem;
-	  }
-  
-	  .faStack {
-		margin-bottom: 0.1875rem;
-		margin-left: 0.375rem;
-		font-size: 0.75rem;
-	  }
-  
-	  .faStack2x {
-		color: $blue;
-		transition: all 0.2s ease;
-	  }
-  
-	  .faStack1x {
-		color: #fff;
-		transition: all 0.2s ease;
-	  }
-  
-	  .faStack:hover {
-		.faStack2x {
-		  color: #fff;
-		}
-  
-		.faStack1x{
-		  color: $blue;
-		}
-	  }
-	}
+    &.logoText {
+      font: 700 2rem/1.5rem 'Montserrat', sans-serif;
+      color: #fff;
+      letter-spacing: -0.5px;
+      text-decoration: none;
+    }
   }
+}
 
-  @media (min-width: 1200px) {
-	.navbarCustom {
-	  padding: 1.125rem 5rem 1.125rem 5rem;
-  
-	  &.topNavCollapse {
-		padding: 0.5rem 5rem 0.5rem 5rem;
-	  }
-	}
+@media (max-width: 768px) {
+  .navbarCustom {
+    padding: 1.125rem 1rem 1.125rem 1rem;
+    box-shadow: none;
+    .navbarBrand.logoText {
+      color: #fff;
+    }
   }
+}
